pern-app-helm-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pern-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: pern-app
spec:
  ingressClassName: nginx
  rules:
    - host: "pern.app.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pern-app
                port: 
                  number: 3080
